cambiar comando de despliegue en el flujo de trabajo de producción de npm de 'prod' a 'start'

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -23,7 +23,7 @@ jobs:
           DB_URL: ${{ secrets.PROD_DB_URL }}
           REDIS_URL: ${{ secrets.PROD_REDIS_URL }}
         run: |
-          npm run prod
+          npm run start
       - name: Notify Deployment Success
         if: success()
         run: echo "Deployment to production was successful!"
